# Frigga

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
Editor/: CMakeLists.txt
Editor/src/: BootstrapIconsFont.h  Editor.cpp  EditorApp.cpp  EditorApp.hpp  MainLayer.cpp  MainLayer.hpp
Editor/src/Panels/: Hierarchy.cpp  Hierarchy.hpp  Preferences.cpp  Preferences.hpp  Resources.cpp  Resources.hpp
Editor/src/Viewports/: Game.cpp  Game.hpp  Scene.cpp  Scene.hpp
Editor/src/Workflows/: ECS.cpp  ECS.hpp  GamePlay.cpp  GamePlay.hpp  Workflow.cpp  Workflow.hpp
Frigga/: CMakeLists.txt  Frigga.hpp  Macro.hpp  pch.hpp
Frigga/Core/: Application.cpp  Application.hpp  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Log.hpp  Window.cpp  Window.hpp
Frigga/Events/: ApplicationEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
Frigga/Gui/: GuiLayer.cpp  GuiLayer.hpp
Frigga/Gui/Extensions/: Extensions.hpp  ToggleButton.cpp
Frigga/Gui/Styles/: PhantomDark.cpp  PhantomLight.cpp  Styles.hpp
Frigga/Platform/OpenGL/: OpenGLContext.cpp  OpenGLContext.hpp  OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.hpp  OpenGLRendererAPI.cpp  OpenGLRendererAPI.hpp
Frigga/Renderer/: FrameBuffer.cpp  FrameBuffer.hpp  RenderContext.cpp  RenderContext.hpp  Renderer.hpp  RendererAPI.cpp  RendererAPI.hpp  SceneRenderer.hpp
Frigga/Scene/: Scene.cpp  Scene.hpp
Frigga/Scene/ECS/: Components.hpp  Design.hpp  Systems.hpp  Tags.hpp  World.hpp
Frigga/Scene/ECS/Components/: MeshComponent.hpp  NameComponent.hpp  TransformComponent.hpp
Frigga/Scene/ECS/Systems/: PhysicsSystem.cpp  PhysicsSystem.hpp  RenderSystem.cpp  RenderSystem.hpp
src/Editor/: BoostrapIconsFont.hpp  EditorApplication.hpp  Main.cpp  MainLayer.cpp  MainLayer.hpp
src/Editor/Panels/: HierarchyLayer.cpp  HierarchyLayer.hpp  PreferencesLayer.cpp  PreferencesLayer.hpp  ResourcesLayer.cpp  ResourcesLayer.hpp
src/Editor/Workflows/: EcsWorkflow.cpp  EcsWorkflow.hpp  GamePlayWorkflow.cpp  GamePlayWorkflow.hpp  Workflow.cpp  Workflow.hpp
src/Frigga/: Frigga.cpp  Frigga.hpp  Macro.hpp  pch.hpp
src/Frigga/Core/: AbstractApplication.cpp  AbstractApplication.hpp  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp
src/Frigga/ECS/Components/: MeshComponent.hpp  NameComponent.hpp  TransformComponent.hpp
src/Frigga/ECS/Systems/: PhysicsSystem.cpp  PhysicsSystem.hpp  RenderSystem.cpp  RenderSystem.hpp
src/Frigga/Events/: ApplicationEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
src/Frigga/Gui/: GuiLayer.cpp  GuiLayer.hpp
src/Frigga/Gui/Extensions/: Extensions.hpp  ToggleButton.cpp
src/Frigga/Gui/Styles/: PhantomDark.cpp  PhantomLight.cpp  Styles.hpp
src/Frigga/Scene/: Scene.cpp  Scene.hpp
